# evsh

./: .gitignore  CMakeLists.txt  README.md  brigade.js
src/: CMakeLists.txt  commandline.cpp  commandline.h  commandregistry.cpp  commandregistry.h  exec.cpp  exec.h  foo.cpp  foo.h  main.cpp  parse.cpp  parse.h
test/: CMakeLists.txt  test_commandline.u.t.cpp  test_commandregistry.u.t.cpp  test_exec.u.t.cpp  test_foo.u.t.cpp  test_meh.cpp  test_parse.u.t.cpp
